# pysc2

./: .gitignore  README.md  pyproject.toml  setup.py
docs/: debug_overlay.md
pysc2/: __init__.py
pysc2/env/: lan_sc2_env.py  remote_sc2_env.py  sc2_env.py  sc2_env_test.py
pysc2/lib/: flags_helper.py  protocol.py  remote_controller.py  renderer_human.py  renderer_human_test.py  sc_process.py
pysc2/run_configs/: __init__.py  platforms.py
